# songs-api

./: Dockerfile  README.md  docker-compose.yml  drop  drop.pub  heroku.yml  pyproject.toml  requirements.txt
api/: models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
song-fr/pages/: index.js
songs/: .env  asgi.py  settings.py  urls.py  wsgi.py
